Cycles Baking from Script #51501

Closed
opened 2017-05-15 12:06:44 +02:00 by Andreas Esau · 6 comments
Member

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.78c, see splash screen)

Short description of error
Cycles baking from script(bpy.ops.object.bake()) can give an empty image in certain cases.

Exact steps for others to reproduce the error
Cycles baking from script usually works perfectly fine. Running the bpy.ops.objec.bake() Operator bakes everything that was setup into the desired image.
However when running the operator from the ui and aborting while baking corrupts somehow the bpy.ops.objec.bake() Operator when run from script.

Fixing the Operator from script only works when rerunning it from ui and letting it finish. Afterwards it works from script again.
A file is attached.
Steps to reproduce:

  1. Start Bake Operator from UI
  2. ESC immedtialy to abort the bake
  3. Run the "Run Script" Operator
  4. Image is empty.

bake_test.blend

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.78c, see splash screen) **Short description of error** Cycles baking from script(bpy.ops.object.bake()) can give an empty image in certain cases. **Exact steps for others to reproduce the error** Cycles baking from script usually works perfectly fine. Running the bpy.ops.objec.bake() Operator bakes everything that was setup into the desired image. However when running the operator from the ui and aborting while baking corrupts somehow the bpy.ops.objec.bake() Operator when run from script. Fixing the Operator from script only works when rerunning it from ui and letting it finish. Afterwards it works from script again. A file is attached. Steps to reproduce: 1. Start Bake Operator from UI 2. ESC immedtialy to abort the bake 3. Run the "Run Script" Operator 4. Image is empty. [bake_test.blend](https://archive.blender.org/developer/F599206/bake_test.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ndee

Added subscriber: @ndee
Dalai Felinto self-assigned this 2017-05-15 12:11:05 +02:00
Author
Member

Just tried out with latest Version from builder.blender.org (Hash 890d871). That bug behavior seems still to be present.

It seems as if some memory/buffer is blocked/corrupted?

Just tried out with latest Version from builder.blender.org (Hash 890d871). That bug behavior seems still to be present. It seems as if some memory/buffer is blocked/corrupted?

Just confirmed that it also works in Linux.

Just confirmed that it also works in Linux.

This issue was referenced by b60f80e9b3

This issue was referenced by b60f80e9b312fa152205fcfc0ed8670c1ce7c63d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51501
No description provided.